--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -263,6 +263,7 @@ h6 {
 .navmenu li:hover>a {
   color: var(--contrast-color);
   background: var(--nav-hover-color);
+  cursor: pointer;
 }
 
 .navmenu a:hover,
